GCA-14 Implement unit tests coverage - improve variable naming and minor test cleanup